<?xml version="1.0" encoding="utf-8"?>
<!--Matias Mäkelä-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tasutakuva"
    tools:context=".ActivityBmi">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/genderSelect"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ika"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/ikaHint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/pituus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderSelect" />

    <EditText
        android:id="@+id/pituus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/pituusHint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/paino"
        app:layout_constraintStart_toStartOf="@+id/ika"
        app:layout_constraintTop_toBottomOf="@+id/ika" />

    <Button
        android:id="@+id/button"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/enter"
        android:onClick="sendMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/paino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/painoHint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/activityTitle"
        app:layout_constraintStart_toStartOf="@+id/pituus"
        app:layout_constraintTop_toBottomOf="@+id/pituus" />

    <RadioGroup
        android:id="@+id/genderSelect"
        android:layout_width="175dp"
        android:layout_height="72dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/ika"
        app:layout_constraintEnd_toEndOf="@+id/ika"
        app:layout_constraintStart_toStartOf="@+id/ika"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/mies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/nainen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nainen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/aktiivisuus"
                android:layout_width="244dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/lepo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/taysilepo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <RadioButton
                    android:id="@+id/kevyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kevyt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioButton
                    android:id="@+id/tavallinen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tavallinen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioButton
                    android:id="@+id/kohtalainen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kohtalainen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioButton
                    android:id="@+id/kova"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kova"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioButton
                    android:id="@+id/erittainkova"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/erittainkova"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/activity"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paino" />


</androidx.constraintlayout.widget.ConstraintLayout>
